Attributes on dataAtomics